Added more variables

--- a/.scripts/config.conf
+++ b/.scripts/config.conf
@@ -1,4 +1,8 @@
-BARE_DOMAIN="sample"
+SITE_TITLE=""
+BARE_DOMAIN=""
+
+REPO_SSH=""
+ACF_KEY=""
 
 DEV_URL="http://${BARE_DOMAIN}.test"
 STAGING_URL="https://${BARE_DOMAIN}.stagingdomain.dev"
