--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -30,6 +30,7 @@ pipelines:
             - apt-get update
             - apt-get install rsync -y
             - rsync -avz --exclude-from '.scripts/deploy/exclude-production.txt' $THEME_DIR $PRODUCTION_USER@$PRODUCTION_HOST:$PRODUCTION_PATH/$THEME_DIR --delete
+            - ssh $PRODUCTION_USER@$PRODUCTION_HOST "cd $PRODUCTION_PATH; wp fastest-cache clear all; exit;"
 
 definitions:
   caches:
