Switched use of "migrate" with "sync"

--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
 		"compile-production": "cd wp-content/themes/shiftr && gulp compile --env production",
 		"sublime": "sublime wp-content/themes/shiftr",
 		"launch-env": ".scripts/launch-env.bash $1",
-		"migrate-db": ".scripts/migrate-db.bash $1 $2",
-		"migrate-media": ".scripts/migrate-media.bash $1 $2",
-		"get-staging-db": ".scripts/migrate-db.bash staging dev",
-		"get-staging-media": ".scripts/migrate-media.bash staging dev",
+		"sync-db": ".scripts/sync-db.bash $1 $2",
+		"sync-media": ".scripts/sync-media.bash $1 $2",
+		"get-staging-db": ".scripts/sync-db.bash staging dev",
+		"get-staging-media": ".scripts/sync-media.bash staging dev",
 		"get-staging": "npm -s run get-staging-db && npm -s run get-staging-media",
-		"get-production-db": ".scripts/migrate-db.bash production dev",
-		"get-production-media": ".scripts/migrate-media.bash production dev",
+		"get-production-db": ".scripts/sync-db.bash production dev",
+		"get-production-media": ".scripts/sync-media.bash production dev",
 		"get-production": "npm -s run get-production-db && npm -s run get-production-media",
-		"push-staging-db": ".scripts/migrate-db.bash dev staging",
-		"push-staging-media": ".scripts/migrate-media.bash dev staging",
+		"push-staging-db": ".scripts/sync-db.bash dev staging",
+		"push-staging-media": ".scripts/sync-media.bash dev staging",
 		"push-staging": "npm -s run push-staging-db && npm -s run push-staging-media"
 	}
 }
