Copied sync-media and adjusted to work on plugins dir

--- a/.scripts/config.conf
+++ b/.scripts/config.conf
@@ -9,6 +9,7 @@ STAGING_URL="https://${BARE_DOMAIN}.stagingdomain.dev"
 PRODUCTION_URL="https://${BARE_DOMAIN}.co.uk"
 
 WP_UPLOADS_DIR="wp-content/uploads/"
+WP_PLUGIN_DIR="wp-content/plugins/"
 
 STAGING_USER=""
 STAGING_HOST=""
