Added ssh-staging and ssh-production commands so can be triggered in VS Code npm scripts

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"build": "cd wp-content/themes/shiftr && gulp build",
 		"compile": "cd wp-content/themes/shiftr && gulp compile",
 		"compile-production": "cd wp-content/themes/shiftr && gulp compile --env production",
-		"ssh": ".scripts/ssh.bash $1",
+        "ssh": ".scripts/ssh.bash $1",
+        "ssh-staging": "npm -s run ssh staging",
+        "ssh-production": "npm -s run ssh production",
 		"launch-env": ".scripts/launch-env.bash $1",
 		"sync-db": ".scripts/sync-db.bash $1 $2",
 		"sync-media": ".scripts/sync-media.bash $1 $2",
