--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
 		"build": "cd wp-content/themes/shiftr && gulp build",
 		"compile": "cd wp-content/themes/shiftr && gulp compile",
 		"compile-production": "cd wp-content/themes/shiftr && gulp compile --env production",
-        "ssh": ".scripts/ssh.bash $1",
+        "ssh": ".workflow/commands/ssh.bash $1",
         "ssh-staging": "npm -s run ssh staging",
         "ssh-production": "npm -s run ssh production",
-		"launch-env": ".scripts/launch-env.bash $1",
-		"sync-db": ".scripts/sync-db.bash $1 $2",
-		"sync-media": ".scripts/sync-media.bash $1 $2",
-		"get-staging-db": ".scripts/sync-db.bash staging dev",
-		"get-staging-media": ".scripts/sync-media.bash staging dev",
+		"launch-env": ".workflow/commands/launch-env.bash $1",
+		"sync-db": ".workflow/commands/sync-db.bash $1 $2",
+		"sync-media": ".workflow/commands/sync-media.bash $1 $2",
+		"get-staging-db": ".workflow/commands/sync-db.bash staging dev",
+		"get-staging-media": ".workflow/commands/sync-media.bash staging dev",
 		"get-staging": "npm -s run get-staging-db && npm -s run get-staging-media",
-		"get-production-db": ".scripts/sync-db.bash production dev",
-		"get-production-media": ".scripts/sync-media.bash production dev",
+		"get-production-db": ".workflow/commands/sync-db.bash production dev",
+		"get-production-media": ".workflow/commands/sync-media.bash production dev",
 		"get-production": "npm -s run get-production-db && npm -s run get-production-media",
-		"push-staging-db": ".scripts/sync-db.bash dev staging",
-		"push-staging-media": ".scripts/sync-media.bash dev staging",
+		"push-staging-db": ".workflow/commands/sync-db.bash dev staging",
+		"push-staging-media": ".workflow/commands/sync-media.bash dev staging",
         "push-staging": "npm -s run push-staging-db && npm -s run push-staging-media",
-        "woo-override": ".scripts/woocommerce-override-template.bash $1"
+        "woo-override": ".workflow/commands/woocommerce-override-template.bash $1"
 	}
 }
