Change of directory name ".scripts" to ".workflow" as it suits better

--- a/.workflow/project.conf
+++ b/.workflow/project.conf
@@ -1,19 +1,22 @@
 SITE_TITLE=""
 BARE_DOMAIN=""
 
-REPO_SSH=""
+REMOTE_REPO=""
 ACF_KEY=""
 
+# Environment URLs
 DEV_URL="http://${BARE_DOMAIN}.test"
 STAGING_URL="https://${BARE_DOMAIN}.stagingdomain.dev"
 PRODUCTION_URL="https://${BARE_DOMAIN}.co.uk"
 
 WP_UPLOADS_DIR="wp-content/uploads/"
 
+# Staging Environment
 STAGING_USER=""
 STAGING_HOST=""
 STAGING_PATH=""
 
+# Production Environment
 PRODUCTION_USER=""
 PRODUCTION_HOST=""
 PRODUCTION_PATH=""
