--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,9 +2,9 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build",
+            "label": "Watch",
             "type": "shell",
-            "command": "npm run build",
+            "command": "npm run watch",
             "presentation": {
                 "focus": false,
                 "panel": "shared",
