--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -26,7 +26,7 @@ jobs:
     - name: Get deps
       run: npm -s run install
     - name: Compile (minified)
-      run: npm -s run compile-production
+      run: npm -s run build
     - name: Deploy to server
       id: deploy
       uses: Pendect/action-rsyncer@v1.1.0
