Update on script name to install theme dependancies

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -24,7 +24,7 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-node-
     - name: Get deps
-      run: npm -s run install
+      run: npm -s run install-theme-deps
     - name: Compile (minified)
       run: npm -s run build
     - name: Deploy to server
