--- a/package.json
+++ b/package.json
@@ -4,24 +4,28 @@
   "description": "Take your WordPress workflow to the next level with a suite of commands that give you back the time to create a better future for the web!",
   "scripts": {
     "install-theme-deps": "cd wp-content/themes/shiftr && npm ci",
-    "watch": "cd wp-content/themes/shiftr && gulp watch",
+    "dev": "cd wp-content/themes/shiftr && gulp dev",
     "build": "cd wp-content/themes/shiftr && NODE_ENV='production' gulp build",
-    "ssh": ".scripts/ssh.bash $1",
+    "new-block": ".workflow/commands/new.sh block $1 $2",
+    "new-part": ".workflow/commands/new.sh part $1 $2",
+    "new-template": ".workflow/commands/new.sh template $1 $2",
+    "ssh": ".workflow/commands/ssh.sh $1",
     "ssh-staging": "npm -s run ssh staging",
     "ssh-production": "npm -s run ssh production",
-    "sync-db": ".scripts/sync-db.bash $1 $2",
-    "sync-media": ".scripts/sync-media.bash $1 $2",
-    "get-staging-db": ".scripts/sync-db.bash staging dev",
-    "get-staging-media": ".scripts/sync-media.bash staging dev",
+    "sync-db": ".workflow/commands/sync-db.sh $1 $2",
+    "sync-media": ".workflow/commands/sync-media.sh $1 $2",
+    "get-staging-db": ".workflow/commands/sync-db.sh staging dev",
+    "get-staging-media": ".workflow/commands/sync-media.sh staging dev",
     "get-staging": "npm -s run get-staging-db && npm -s run get-staging-media",
-    "get-production-db": ".scripts/sync-db.bash production dev",
-    "get-production-media": ".scripts/sync-media.bash production dev",
+    "get-production-db": ".workflow/commands/sync-db.sh production dev",
+    "get-production-media": ".workflow/commands/sync-media.sh production dev",
     "get-production": "npm -s run get-production-db && npm -s run get-production-media",
-    "push-staging-db": ".scripts/sync-db.bash dev staging",
-    "push-staging-media": ".scripts/sync-media.bash dev staging",
+    "push-staging-db": ".workflow/commands/sync-db.sh dev staging",
+    "push-staging-media": ".workflow/commands/sync-media.sh dev staging",
     "push-staging": "npm -s run push-staging-db && npm -s run push-staging-media",
-    "woo-override": ".scripts/woocommerce-override-template.bash $1",
-    "launch-env": ".scripts/launch-env.bash $1"
+    "wc-template": ".workflow/commands/wc-template.sh $1",
+    "publish-staging": ".workflow/commands/publish-env.sh staging",
+    "publish-production": ".workflow/commands/publish-env.sh production"
   },
   "repository": {
     "type": "git",
