--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
 .DS_Store
+
+node_modules
+
+wp-admin/
+wp-includes/
+.htaccess
+/index.php
+license.txt
+liesmich.html
+readme.html
+wp-*.php
+xmlrpc.php
+config/
+*.sql
+wp-content/index.php
+wp-content/debug.log
+wp-content/plugins
+wp-content/mu-plugins
+wp-content/uploads
+wp-content/upgrade
+wp-content/languages
+wp-content/cache
