--- a/.workflow/config.conf
+++ b/.workflow/config.conf
@@ -1,18 +1,18 @@
-SITE_TITLE=""
-BARE_DOMAIN=""
+SITE_TITLE="Winter Comms"
+BARE_DOMAIN="wintercomms"
 
 REPO_SSH=""
 ACF_KEY=""
 
 DEV_URL="http://${BARE_DOMAIN}.test"
-STAGING_URL="https://${BARE_DOMAIN}.stagingdomain.dev"
+STAGING_URL="https://${BARE_DOMAIN}.digital-dev.co.uk"
 PRODUCTION_URL="https://${BARE_DOMAIN}.co.uk"
 
 WP_UPLOADS_DIR="wp-content/uploads/"
 
-STAGING_USER=""
-STAGING_HOST=""
-STAGING_PATH=""
+STAGING_USER="boxchilli"
+STAGING_HOST="185.151.29.152"
+STAGING_PATH="/var/www/wintercomms.digital-dev.co.uk/public_html"
 
 PRODUCTION_USER=""
 PRODUCTION_HOST=""
